[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes_and_scripts/game/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/fonts/scoreBar_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes_and_scripts/Option.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes_and_scripts/globalObjects/BackToMenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/themes/blue_theme.tres" type="Theme" id=5]

[node name="Game" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ExternalVBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_constants/separation = 70
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDContainer" type="HBoxContainer" parent="ExternalVBoxContainer"]
margin_top = 12.0
margin_right = 360.0
margin_bottom = 59.0
custom_constants/separation = 10
alignment = 1

[node name="ScoreBar" type="ProgressBar" parent="ExternalVBoxContainer/HUDContainer"]
margin_right = 240.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )

[node name="Container" type="PanelContainer" parent="ExternalVBoxContainer/HUDContainer"]
margin_left = 250.0
margin_right = 360.0
margin_bottom = 47.0

[node name="ColorRect" type="ColorRect" parent="ExternalVBoxContainer/HUDContainer/Container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.709804 )

[node name="ScoreBarText" type="Label" parent="ExternalVBoxContainer/HUDContainer/Container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 40.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 2 )
text = "100/100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionContainer" type="MarginContainer" parent="ExternalVBoxContainer"]
margin_top = 129.0
margin_right = 360.0
margin_bottom = 198.0

[node name="ColorRect" type="ColorRect" parent="ExternalVBoxContainer/QuestionContainer"]
margin_right = 360.0
margin_bottom = 69.0
color = Color( 0, 0, 0, 0.709804 )

[node name="Question" type="Label" parent="ExternalVBoxContainer/QuestionContainer"]
margin_right = 360.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 2 )
text = "Cuanto es:
 X * Y"
align = 1
valign = 1

[node name="Options" type="MarginContainer" parent="ExternalVBoxContainer"]
margin_left = 50.0
margin_top = 268.0
margin_right = 310.0
margin_bottom = 528.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBox" type="HBoxContainer" parent="ExternalVBoxContainer/Options"]
margin_right = 260.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="VBox1" type="VBoxContainer" parent="ExternalVBoxContainer/Options/HBox"]
margin_right = 120.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="op1" parent="ExternalVBoxContainer/Options/HBox/VBox1" instance=ExtResource( 3 )]

[node name="op2" parent="ExternalVBoxContainer/Options/HBox/VBox1" instance=ExtResource( 3 )]
margin_top = 140.0
margin_bottom = 260.0

[node name="VBox2" type="VBoxContainer" parent="ExternalVBoxContainer/Options/HBox"]
margin_left = 140.0
margin_right = 260.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="op3" parent="ExternalVBoxContainer/Options/HBox/VBox2" instance=ExtResource( 3 )]

[node name="op4" parent="ExternalVBoxContainer/Options/HBox/VBox2" instance=ExtResource( 3 )]
margin_top = 140.0
margin_bottom = 260.0

[node name="Button" parent="ExternalVBoxContainer" instance=ExtResource( 4 )]
margin_top = 598.0
margin_right = 360.0
margin_bottom = 628.0

[node name="GameSoundEffects" type="AudioStreamPlayer" parent="ExternalVBoxContainer"]
pause_mode = 1
